<resources>
    <string name="app_name">CharacterMaster</string>
    <string name="imgLogo">Character Master logo; winged dragon in a circle.</string>
    <string name="appName">Character Master</string>
    <string name="createCharacter">create character</string>
    <string name="viewGrimoire">View Grimoire</string>
    <string name="title_activity_grimoire">GrimoireActivity</string>
    <string name="title_activity_character">CharacterActivity</string>
    <string name="title_activity_character_details">CharacterDetails</string>
    <string name="character_image">Character image</string>
    <string name="details">Details</string>
    <string name="general">General</string>
    <string name="character">Character</string>
    <string name="abilities">Abilities</string>
    <string name="stats">Stats</string>
    <string name="skills">Skills</string>
    <string name="attacks">Attacks</string>
    <string name="spells">Spells</string>
    <string name="inventory">Inventory</string>
    <string name="str">STR</string>
    <string name="dex">DEX</string>
    <string name="con">CON</string>
    <string name="intel">INT</string>
    <string name="cha">CHA</string>
    <string name="wis">WIS</string>
    <string name="name">Name</string>
    <string name="txtClass">Class</string>
    <string name="level">Level</string>
    <string name="alignment">Alignment</string>
    <string name="race">Race</string>
    <string name="xp">XP</string>
    <string name="atk_bonus">Atk Bonus</string>
    <string name="damage">Damage</string>
    <string name="type">Type</string>
    <string name="spellcasting">Spellcasting</string>
    <string name="ac">AC</string>
    <string name="initiative">Initiative</string>
    <string name="hp">HP</string>
    <string name="speed">Speed</string>
    <string name="current_hp">Current HP</string>
    <string name="increase">Increase</string>
    <string name="decrease">Decrease</string>
    <string name="temporary_hp">Temporary HP</string>
    <string name="hit_dice">Hit Dice</string>
    <string name="inspiration">Inspiration</string>
    <string name="background">Background</string>
    <string name="flaws">Flaws</string>
    <string name="bonds">Bonds</string>
    <string name="ideals">Ideals</string>
    <string name="appearance">Appearance</string>
    <string name="traits">Traits</string>
    <string name="picture">Picture</string>
    <string name="upload_image">Upload Image</string>
    <string name="proficiency">Proficiency</string>
    <string name="acrobatics_dex">Acrobatics (Dex)</string>
    <string name="animal_handling_wis">Animal Handling (Wis)</string>
    <string name="arcana_int">Arcana (Int)</string>
    <string name="athletics_str">Athletics (Str)</string>
    <string name="deception_cha">Deception (Cha)</string>
    <string name="history_int">History (Int)</string>
    <string name="insight_wis">Insight (Wis)</string>
    <string name="intimidation_cha">Intimidation (Cha)</string>
    <string name="investigation_int">Investigation (Int)</string>
    <string name="medicine_wis">Medicine (Wis)</string>
    <string name="nature_int">Nature (Int)</string>
    <string name="perception_wis">Perception (Wis)</string>
    <string name="performance_cha">Performance (Cha)</string>
    <string name="persuasion_cha">Persuasion (Cha)</string>
    <string name="religion_int">Religion (Int)</string>
    <string name="sleight_of_hand_dex">Sleight of Hand (Dex)</string>
    <string name="stealth_dex">Stealth (Dex)</string>
    <string name="survival_wis">Survival (Wis)</string>
    <string name="ability">Ability</string>
    <string name="saving_throw">Saving Throw</string>
    <string name="modifier">Modifier</string>
    <string name="score">Score</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_map">Map</string>
    <string name="buy_dnd_resources"><![CDATA[Buy D&d Resources]]></string>
    <string name="google_maps_key">AIzaSyDoC-CtilUhofsTjfMRtBIvBCMCWGwV1Is</string>
</resources>
